objects/RQI_Related_Article__c.object
<CustomObject>
    <fields>
        <fullName>Article_ID__c</fullName>
        <label>Article ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Link__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Article_ID__c , Article_Title__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Title__c</fullName>
        <label>Article Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RQI_Audit__c</fullName>
        <label>RQI Audit</label>
        <referenceTo>RQI_Audit__c</referenceTo>
        <relationshipLabel>RQI Related Articles</relationshipLabel>
        <relationshipName>RQI_Related_Articles</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>RQI Related Article</label>
    <nameField>
        <displayFormat>RRA-{0000}</displayFormat>
        <label>RQI Related Articles Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RQI Related Articles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>